# function_objects

./: CMakeLists.txt  README.md  concepts.hpp  copy_only.hpp  copyable.hpp  function_object.hpp  move_only.hpp  tests.cpp
